<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:elevation="10sp">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_log_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_app"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:layout_gravity="center"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/baseline_shopping_cart_24"
        android:layout_gravity="end"
        android:contentDescription="@string/icono_carrito" />
    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/border_card"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/food1"
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:layout_marginTop="5dp"
            android:contentDescription="@string/description_img_food1"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/filete_pollo_tomate"
            tools:layout_editor_absoluteX="45dp"
            tools:layout_editor_absoluteY="16dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:layout_editor_absoluteX="256dp"
            tools:layout_editor_absoluteY="174dp">

            <TextView
                android:id="@+id/titleF1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:text="@string/title_food1"
                android:textSize="17sp"
                tools:layout_editor_absoluteX="45dp"
                tools:layout_editor_absoluteY="170dp" />

            <RatingBar
                android:id="@+id/ratBarF1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/description_ratingbar"
                android:numStars="5"
                android:rating="0"
                android:scaleX="0.5"
                android:scaleY="0.5"
                android:theme="@style/ratinBar"
                tools:layout_editor_absoluteX="196dp"
                tools:layout_editor_absoluteY="137dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtF1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/txt_food1"
                android:textSize="16sp"
                tools:layout_editor_absoluteX="45dp"
                tools:layout_editor_absoluteY="194dp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnRest1"
                    android:layout_width="48dp"
                    android:layout_height="wrap_content"
                    android:padding="0dp"
                    android:text="@string/rest"
                    tools:ignore="DuplicateSpeakableTextCheck" />

                <EditText
                    android:id="@+id/num1"
                    android:layout_width="49dp"
                    android:layout_height="49dp"
                    android:autofillHints=""
                    android:backgroundTint="@android:color/transparent"
                    android:hint="@string/descrip_food1"
                    android:inputType="number"
                    android:text="@string/cantidad"
                    android:textAlignment="center"
                    android:textSize="14sp"
                    tools:ignore="DuplicateSpeakableTextCheck" />

                <Button
                    android:id="@+id/btnAdd1"
                    android:layout_width="48dp"
                    android:layout_height="wrap_content"
                    android:padding="0dp"
                    android:text="@string/add"
                    tools:ignore="DuplicateSpeakableTextCheck" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/border_card"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <ImageView
            android:id="@+id/food3"
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:layout_marginTop="5dp"
            android:contentDescription="@string/description_img_food1"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/pasta_salsa_tomate_pollo"
            tools:layout_editor_absoluteX="45dp"
            tools:layout_editor_absoluteY="16dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:layout_editor_absoluteX="256dp"
            tools:layout_editor_absoluteY="174dp">

            <TextView
                android:id="@+id/titleF3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:text="@string/title_food1"
                android:textSize="17sp"
                tools:layout_editor_absoluteX="45dp"
                tools:layout_editor_absoluteY="170dp" />

            <RatingBar
                android:id="@+id/ratBarF3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/description_ratingbar"
                android:numStars="5"
                android:rating="0"
                android:scaleX="0.5"
                android:scaleY="0.5"
                android:theme="@style/ratinBar"
                tools:layout_editor_absoluteX="196dp"
                tools:layout_editor_absoluteY="137dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtF3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/txt_food1"
                android:textSize="16sp"
                tools:layout_editor_absoluteX="45dp"
                tools:layout_editor_absoluteY="194dp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnRest3"
                    android:layout_width="48dp"
                    android:layout_height="wrap_content"
                    android:padding="0dp"
                    android:text="@string/rest" />

                <EditText
                    android:id="@+id/num3"
                    android:layout_width="49dp"
                    android:layout_height="49dp"
                    android:autofillHints=""
                    android:backgroundTint="@android:color/transparent"
                    android:inputType="number"
                    android:labelFor="@id/num3"
                    android:text="@string/cantidad"
                    android:textAlignment="center"
                    android:textSize="14sp" />

                <Button
                    android:id="@+id/btnAdd3"
                    android:layout_width="48dp"
                    android:layout_height="wrap_content"
                    android:padding="0dp"
                    android:text="@string/add"
                    android:theme="@style/Widget.AppCompat.Button.Small" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/border_card"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <ImageView
            android:id="@+id/food2"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="5dp"
            android:contentDescription="@string/description_img_food1"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/hipocalorico"
            tools:layout_editor_absoluteX="45dp"
            tools:layout_editor_absoluteY="16dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:layout_editor_absoluteX="256dp"
            tools:layout_editor_absoluteY="174dp">

            <TextView
                android:id="@+id/titleF2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:text="@string/title_food1"
                android:textSize="17sp"
                tools:layout_editor_absoluteX="45dp"
                tools:layout_editor_absoluteY="170dp" />

            <RatingBar
                android:id="@+id/ratBarF2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/description_ratingbar"
                android:numStars="5"
                android:rating="0"
                android:scaleX="0.5"
                android:scaleY="0.5"
                android:theme="@style/ratinBar"
                tools:layout_editor_absoluteX="196dp"
                tools:layout_editor_absoluteY="137dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtF2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/txt_food1"
                android:textSize="16sp"
                tools:layout_editor_absoluteX="45dp"
                tools:layout_editor_absoluteY="194dp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnRest2"
                    android:layout_width="48dp"
                    android:layout_height="wrap_content"
                    android:padding="0dp"
                    android:text="@string/rest" />

                <EditText
                    android:id="@+id/num2"
                    android:layout_width="49dp"
                    android:layout_height="49dp"
                    android:autofillHints=""
                    android:backgroundTint="@android:color/transparent"
                    android:hint="@string/descrip_food2"
                    android:inputType="number"
                    android:labelFor="@id/num2"
                    android:text="@string/cantidad"
                    android:textAlignment="center"
                    android:textSize="14sp" />

                <Button
                    android:id="@+id/btnAdd2"
                    android:layout_width="48dp"
                    android:layout_height="wrap_content"
                    android:padding="0dp"
                    android:text="@string/add" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btnUbicacion"
        android:layout_width="150dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:backgroundTint="@color/color_log_btn"
        android:text="@string/btn_ubicacion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />

    <Button
        android:id="@+id/btnCerrar"
        android:layout_width="150dp"
        android:layout_height="48dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/color_log_btn"
        android:text="@string/btn_cerrar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />

</androidx.constraintlayout.widget.ConstraintLayout>
